--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,11 @@
     "rules": {
         "no-console": "off",
         "linebreak-style": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "camelcase":"off",
+        "no-else-return":"off",
+        "max-len":"off",
+        "no-unused-vars": "off"
         
     }
 }
